Refactor de la connexion avec la BDD en JPA